# examples

./: .gitignore  Makefile  README.md  genassets.sh
.github/: CODEOWNERS
.github/workflows/: TEMPLATE_actor.yml  TEMPLATE_provider.yml  animal-image-downloader.yml  blobby.yml  dogs-and-cats.yml  echo-messaging.yml  echo-release.yml  echo.yml  example-logging.yml  extras-release.yml  extras.yml  factorial.yml  hello.yml  ifconfig.yml  keyvalue-provider-release.yml  keyvalue-provider.yml  (+20 more)
actor/: Makefile  README.md
actor-to-actor/: Makefile  README.md
actor/animal-image-downloader/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/animal-image-downloader/src/: lib.rs
actor/echo/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/echo-messaging/: .gitignore  Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/echo-messaging/src/: lib.rs
actor/echo-wasi-preview2/: .gitignore  Cargo.toml  Justfile  wasmcloud.toml
actor/echo-wasi-preview2/src/: lib.rs
actor/echo-wasi-preview2/wit/: echo.wit
actor/echo/src/: lib.rs
actor/hello/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/hello/src/: lib.rs
actor/image_upload/: Cargo.toml  Makefile  README.md  codegen.toml  wasmcloud.toml
actor/image_upload/src/: lib.rs
actor/kvcounter/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  error-type.wit  httpserver.wit  keyvalue.wit  wadm.yaml  wasmbus-common.wit  wasmbus-receiver.wit  wasmbus-sender.wit  wasmcloud.toml
actor/kvcounter-wasmcon2023/: .gitignore  Cargo.toml  Justfile  README.md  build.rs  wasi_snapshot_preview1.wasm  wasmcloud.toml
actor/kvcounter-wasmcon2023/src/: lib.rs  ui.rs
actor/kvcounter-wasmcon2023/ui/: .npmrc  package-lock.json
actor/kvcounter-wasmcon2023/ui/src/components/: App.tsx
actor/kvcounter-wasmcon2023/wit/: deps.toml  kvcounter.wit
actor/kvcounter/actor/: Cargo.toml  Makefile
actor/kvcounter/actor/src/: lib.rs
actor/kvcounter/httpserver/: Cargo.toml
actor/kvcounter/httpserver/src/: lib.rs
actor/kvcounter/keyvalue/: Cargo.toml
actor/kvcounter/keyvalue/src/: lib.rs
actor/kvcounter/src/: lib.rs  ui.rs
actor/kvcounter/ui/: .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js
actor/kvcounter/ui/public/: index.html
actor/kvcounter/ui/src/: Api.js  ApiMethods.js  App.js  index.css  index.tsx
actor/kvcounter/ui/src/components/: App.tsx
actor/kvcounter/ui/src/hooks/: useScreenSize.ts
actor/kvcounter/ui/src/services/: ApiService.ts
actor/kvcounter/wasmbus-sender/: Cargo.toml
actor/kvcounter/wasmbus-sender/src/: lib.rs
actor/logging/: Cargo.toml  Makefile  README.md  wasmcloud.toml
actor/logging/src/: lib.rs
actor/message-pub/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/message-pub/src/: lib.rs
actor/policy/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/policy/src/: lib.rs
adsb/: .gitignore  README.md  adsb.smithy  codegen.toml
component-demo/: README.md
configservice/: Cargo.toml  README.md
configservice/src/: main.rs
cron/: README.md  wadm.yaml
crypto/: README.md  signature-demo.md
docker/: README.md  docker-compose.yml  docker-compose_without-host.yml
echo/: Cargo.toml  README.md  manifest.yaml
echo-example/: Cargo.toml
echo/src/: lib.rs
extras/: Cargo.toml  Makefile  README.md
extras/src/: lib.rs
http-fib/: Cargo.toml  Makefile  README.md  manifest.yaml
image-host/: Makefile  manifest.yaml
inmemory-keyvalue/: Cargo.toml  Makefile
inmemory-keyvalue/src/: lib.rs
inmemory-streams/: Cargo.toml  README.md
interface/: Makefile  README.md
joker/: .gitignore  README.md  codegen.toml  joker.smithy
keyvalue-provider/: Cargo.toml  README.md
keyvalue-provider/src/: kv.rs  lib.rs
kvcounter/: Cargo.toml  README.md
kvcounter-as/: .gitignore  package-lock.json  package.json  sign.sh
kvcounter/src/: lib.rs
leaderboard/: Cargo.toml  README.md  wasmcloud.toml
leaderboard/src/: lib.rs
logger/: Cargo.toml  Makefile  README.md
logger/.keys/: account.nk  account.txt  module.nk  module.txt
logger/src/: lib.rs
multibinding/: Cargo.toml  Makefile
multibinding/src/: lib.rs
ngs/: core.cfg  extender.cfg
petclinic/: .gitignore  Makefile  README.md  checkup.sh  create_data.sql  docker-compose.yml  http_config.json  https_config.json  run.sh  sql_config.template  wadm.yaml
pre-otp/: README.md
provider/: Makefile  README.md
statichost/: Cargo.toml
statichost/src/: main.rs
stock_actor/: Cargo.toml  README.md  account.nk  module.nk  sign.sh
stock_capability/: Cargo.toml  README.md  account.nk  module.nk  sign.sh
stock_capability/src/: lib.rs
stock_host/: Cargo.toml
stock_host/src/: main.rs
subscriber/: Cargo.toml  Makefile  README.md
subscriber/src/: lib.rs
todo-backend/: Cargo.toml  Makefile  README.md  manifest.yaml
todo-backend/src/: lib.rs
todomvc/: Cargo.toml  Makefile  README.md  manifest.yaml
todomvc/src/: lib.rs
wasi-consumer/: Cargo.toml  Makefile
wasi-consumer/src/: lib.rs
wasi-provider/: Cargo.toml  Makefile
wasi-provider/src/: lib.rs
wasmcloud-wasi-kv/: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
wasmcloud-wasi-kv/components/: kv_demo.wasm  kv_demo_s.wasm
wasmcloud-wasi-kv/components/wasi_snapshot_preview_reactor_latest/: wasi_snapshot_preview1.wasm
wasmcloud-wasi-kv/kv-demo/: Cargo.toml  Makefile
wasmcloud-wasi-kv/kv-demo/src/: lib.rs
wasmcloud-wasi-kv/wasmcloud-wasi-kv-cc/: .gitignore  Cargo.toml  Makefile
wasmcloud-wasi-kv/wasmcloud-wasi-kv-cc/src/: lib.rs
wasmcloud-wasi-kv/wasmcloud-wasi-kv-types/: Cargo.toml
wasmcloud-wasi-kv/wasmcloud-wasi-kv-types/src/: lib.rs
wasmcloud-wasi-kv/wasmcloud-wasi-kv-wasi-cloud-error/: Cargo.toml  Makefile
wasmcloud-wasi-kv/wasmcloud-wasi-kv-wasi-cloud-error/src/: lib.rs
wasmcloud-wasi-kv/wasmcloud-wasi-kv-wit/: .gitignore  Cargo.toml  Makefile  README.md
wasmcloud-wasi-kv/wasmcloud-wasi-kv-wit/src/: lib.rs
wasmcloud-wasi-kv/wit/: keyvalue.wit  kvdemo.wit  streams.wit  types.wit  wasi-cloud-error.wit
(+559 files in other folders)
