[package]
name = "configservice"
description = "An example wasmCloud configuration service"
version = "0.2.1"
edition = "2021"

[dependencies]
serde = "1.0.136"
nats = "0.23.0"
serde_json = "1.0.79"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"]}
atty = {version = "0.2"}
lazy_static = "1.4.0"