[package]
name = "echo"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.7.0"
serde_json ="1.0.60"
serde = {version = "1.0.118", features = ["derive"]}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
