[package]
name = "echo"
version = "0.1.0"
authors = ["wasmCloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-core = { path = "../../actor-interfaces/rust/actor-core", features = ["guest"] }
actor-http-server = { path = "../../actor-interfaces/rust/http-server", features = ["guest"]}
serde_json ="1.0.60"
serde = {version = "1.0.118", features = ["derive"]}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
