[package]
name = "extras"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wascc-actor = "0.5.0"
wascc-actor = { path = "../../wascc-actor" }
serde_json = "1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
