[package]
name = "extras"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = { version = "0.7.0", path = "../../wascc-actor" }
serde_json = "1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
