[package]
name = "http-fib"
version = "0.1.0"
authors = ["Brooks Townsend <brooksmtownsend@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }

wasmcloud-actor-http-server = { version = "0.1.2", features = ["guest"] }
wasmcloud-actor-keyvalue = { version = "0.2.2", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
