[package]
name = "inmemory-keyvalue"
version = "0.4.0"
authors = ["wasmCloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
wascc-codec = "0.9.0"
log = "0.4.8"
env_logger = "0.7.1"
actor-keyvalue = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main"}
actor-core = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main"}