[package]
name = "kvcounter"
version = "0.1.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-core = { git = "https://github.com/wascc/actor-interfaces", branch = "main" }
actor-http-server = { git = "https://github.com/wascc/actor-interfaces", branch = "main"}
actor-keyvalue = { git = "https://github.com/wascc/actor-interfaces", branch = "main"}
serde_json = "1.0.59"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
