[package]
name = "kvcounter"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-core = { path = "../../actor-interfaces/rust/actor-core", features = ["guest"]}
actor-http-server = { path = "../../actor-interfaces/rust/http-server", features = ["guest"]}
actor-keyvalue = { path = "../../actor-interfaces/rust/keyvalue", features = ["guest"]}
serde_json = "1.0.59"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
