[package]
name = "kvcounter"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-keyvalue = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"] }
actor-core = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"] }
actor-http-server = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
serde_json = "1.0.59"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
