[package]
name = "leaderboard"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "leaderboard"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpserver = "0.10.0"
wasmcloud-interface-keyvalue = "0.10.0"
serde = "1.0.162"
serde_json = "1.0.96"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
