[package]
name = "logger"
version = "0.1.0"
authors = ["wasmCloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
log = "0.4.14"
wasmcloud-actor-core = { version = "0.2.0", features = ["guest"] }
wasmcloud-actor-logging = { version = "0.1.0", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.0", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
