[package]
name = "multibinding"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = { version = "0.6.0", path = "../../wascc-actor" }
serde_json = "1.0.48"

[profile.release]
# Optimize for small code size
opt-level = "s"
