[package]
name = "statichost"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wascc-host = "0.5.3"
redis-provider = { path = "../../redis-provider", features = ["static_plugin"] }
wascc-httpsrv = { path = "../../http-server-provider", features = ["static_plugin"] }
