[package]
name = "statichost"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wascc-host = "0.6.1"
wascc-redis = { version = "0.6.0", features = ["static_plugin"] }
wascc-httpsrv = { version = "0.6.0", features = ["static_plugin"] }
