[package]
name = "stock_capability"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.1.0"
serde = { version = "1.0.103", features = ["derive"]}
serde_json = "1.0.44"

[profile.release]
# Optimize for small code size
opt-level = "s"
