[package]
name = "stock_host"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wascc-host = { path = "../../wascc-host" }
env_logger = "0.7.1"
wapc = "0.1.0"