[package]
name = "subscriber"
version = "0.2.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wascc-actor = "0.5.0"
wascc-actor = { version = "0.7.0", path = "../../wascc-actor" }

[profile.release]
# Optimize for small code size
opt-level = "s"
