[package]
name = "wasi-provider"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wascc-actor = "0.5.0"
wascc-actor = { version = "0.7.3", path = "../../wascc-actor" }
serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.111"
rmp-serde = "0.14.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
