[workspace]
resolver = "2"
members = [
    "wasmcloud-wasi-kv-wasi-cloud-error",
    "wasmcloud-wasi-kv-types",
    "wasmcloud-wasi-kv-wit",
    "wasmcloud-wasi-kv-cc",
    "kv-demo",
]

[workspace.dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev="7ab30c41b0d537ffc552064156d1c8dca107306e" }
wat = { version = "1.0.61", default-features = false }
wit-component = { version = "0.7.4", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "8d3a881b524d56498dfc71b65818b2abbeb1da44", default-features = false }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "8d3a881b524d56498dfc71b65818b2abbeb1da44", default-features = false }