[package]
name = "animal-image-downloader"
version = "0.1.0"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "animal_image_downloader"

[dependencies]
futures = "0.3"
serde_json = "1.0.85"
wasmbus-rpc = "0.10.1"
wasmcloud-interface-messaging = "0.7.0"
wasmcloud-interface-httpclient = "0.7.0"
wasmcloud-interface-blobstore = "0.4.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
