[package]
name = "animal-image-downloader"
version = "0.2.0"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "animal_image_downloader"

[dependencies]
futures = "0.3"
serde_json = "1.0.85"
wasmbus-rpc = "0.11.0"
wasmcloud-interface-messaging = "0.8.0"
wasmcloud-interface-httpclient = "0.8.0"
wasmcloud-interface-blobstore = "0.5.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
