[package]
name = "animal-image-downloader"
version = "0.1.2"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "animal_image_downloader"

[dependencies]
futures = "0.3"
serde_json = "1.0.85"
wasmbus-rpc = "0.13"
wasmcloud-interface-blobstore = "0.6"
wasmcloud-interface-httpclient = "0.9"
wasmcloud-interface-messaging = "0.9"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
