[package]
name = "echo-messaging"
version = "0.1.3"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "249102567eb50fddaf3a35c2546afbdb321e8b16" }
wasmcloud-interface-logging = { git = "https://github.com/wasmcloud/interfaces", rev = "d4d6b2af443246f09f2201ba502b87cc1389bb6f" }
wasmcloud-interface-messaging = { git = "https://github.com/wasmcloud/interfaces", rev = "d4d6b2af443246f09f2201ba502b87cc1389bb6f" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
