[package]
name = "echo-messaging"
version = "0.1.3"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.9"
wasmcloud-interface-logging = "0.6.0"
wasmcloud-interface-messaging = "0.6.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
