[package]
name = "echo-messaging"
version = "0.1.6"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.11"
wasmcloud-interface-logging = "0.8"
wasmcloud-interface-messaging = "0.8"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
