[package]
name = "echo-component-p2"
description = "A wasm32-wasi-preview2 echo actor component"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.1.1"
serde = "1.0.171"
serde_json = { version = "1.0.102", features = ["std"] }
wasmcloud-actor = { git = "https://github.com/wasmCloud/wasmCloud.git", version = "0.1.0", features = [ "component", "rand", "uuid" ] }
#wasmcloud-actor = { git = "https://github.com/wasmCloud/wasmCloud.git", rev = "d5beecd", features = [ "component", "rand", "uuid" ] }
wasmcloud-interface-httpserver = "0.10.0"
wit-bindgen = { version = "0.8.0", features = ["default"] }
