[package]
name = "echo-wasi-preview2"
version = "0.1.0"
edition = "2021"
publish = false
description = """
A wasm32-wasi-preview2 echo actor component using the httpserver contract
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.1.1"
serde = "1.0.171"
serde_json = { version = "1.0.102", features = ["std"] }
wasmcloud-actor = { git = "https://github.com/wasmCloud/wasmCloud.git", version = "0.1.0", features = [ "component", "rand", "uuid" ] }
wasmcloud-interface-httpserver = "0.10.0"
wit-bindgen = { version = "0.8.0", features = ["default"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true