[package]
name = "echo"
version = "0.3.4"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.7"
wasmcloud-interface-httpserver = "0.4"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
