[package]
name = "echo"
version = "0.3.6"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "6da17f739b0ad0f1a58df2061eedd0d2f92baee0" }
wasmcloud-interface-httpserver = { git = "https://github.com/wasmcloud/interfaces", rev = "763d27dcfd6a5bf72a9f82ed406f638fdb429615" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
