[package]
name = "echo"
version = "0.3.8"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wasmcloud-interface-httpserver = "0.10"
wasmbus-rpc = "0.13"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
