[package]
name = "hello"
version = "0.1.2"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.5.2"
wasmcloud-interface-httpserver = "0.2.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
