[package]
name = "image_upload"
version = "0.1.0"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "image_upload"

[dependencies]
async-trait = "0.1"
form_urlencoded = "1.0"
futures = "0.3"
image = { version = "0.24.1", default_features = false, features = [ "gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon" ] }
log = "0.4"
serde_bytes = "0.11"
serde_json = "1.0.79"
serde = { version = "1.0", features = [ "derive" ] }
sha2 = "0.10"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "6da17f739b0ad0f1a58df2061eedd0d2f92baee0" }
wasmcloud-interface-httpserver = { git = "https://github.com/wasmcloud/interfaces", rev = "763d27dcfd6a5bf72a9f82ed406f638fdb429615" }
wasmcloud-interface-logging = { git = "https://github.com/wasmcloud/interfaces", rev = "763d27dcfd6a5bf72a9f82ed406f638fdb429615" }

[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
