[package]
name = "example-logging"
version = "0.2.3"
authors = [ "wasmcloud Team" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.9"
wasmcloud-example-runner = { path="../../interface/runner/rust" }
wasmcloud-interface-logging = "0.6.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
