[package]
name = "example-logging"
version = "0.3.0"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.11.2"
wasmcloud-example-runner = { path="../../interface/runner/rust" }
wasmcloud-interface-logging = "0.8.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
