[package]
name = "message-pub"
version = "0.2.0"
authors = [ "wasmCloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "message_pub"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11.0"
wasmcloud-interface-httpserver = "0.8.0"
wasmcloud-interface-messaging = "0.8.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
