[package]
name = "example-policy"
version = "0.2.0"
authors = [ "A policy enforcer that restricts actors and providers to only wasmCloud official artifacts" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.11.0"
wasmcloud-interface-messaging = "0.8.0"
serde_json = "1.0.83"
serde = "1.0.143"

[profile.release]
# Optimize for small code size
lto = true
strip = true
opt-level = "s"
